# English_Reader

./: README.md
YAFR/: CMakeLists.txt  cards.h  collection.h  collection.ui  dictionary.ui  entrance.ui  library.h  main.cpp  menuconnectuons.h  readnow.ui  sectionbase.cpp  sectionbase.ui
client/: CMakeLists.txt  cards.ui  conanfile.txt  config.json  instruction.md  library.ui  readnow.cpp  readnow.h  sectionbase.cpp  settings.ui
client/db_handling_tmp/: CMakeLists.txt  book.h  book_rep.cpp  book_rep.h  book_rep_examples.cpp  db_manager.h  instruction.md  library.cpp  library.h  library_usage_examples.cpp
client/include/: actCollectionsHistory.h  authorization.h  authorizationWindow.h  book.h  bookRep.h  book_rep.h  cards.h  cardsDisplay.h  cards_display.h  collection.h  collectionWindow.h  connectingWindow.h  dbManager.h  db_manager.h  dictionary.h  dictionaryWindow.h  dictionary_logic.h  dictionary_window.h  entrance.h  learnWindow.h  library.h  libraryWindow.h  library_window.h  menuconnectuons.h  periodic_function.h  readNowWindow.h  readnow.h  sectionbase.h  serverProblemsException.h  serverProblemsWindow.h  settings.h  user.h  userRepLocal.h  word.h  wordRep.h  wordSetContentRep.h  wordSetRep.h  wordset.h
client/src/: authorizationWindow.cpp  bookRep.cpp  book_rep.cpp  booknames.txt  cards.cpp  cardsDisplay.cpp  cards_display.cpp  collectionWindow.cpp  connectingWindow.cpp  dbManager.cpp  dictionary.cpp  dictionaryWindow.cpp  dictionary_logic.cpp  learnWindow.cpp  library.cpp  libraryWindow.cpp  library_window.cpp  main.cpp  readNowWindow.cpp  readnow.cpp  sectionbase.cpp  serverProblemsWindow.cpp  translater.cpp  translator.cpp  user.cpp  userRepLocal.cpp  word.cpp  wordRep.cpp  wordSetContentRep.cpp  wordSetRep.cpp  wordset.cpp
client/src/books/: Beatles.txt  book_Hachiko.txt
include/: book.h  config.h  word.h  wordset.h
server/: CMakeLists.txt  config.json
server/books/: Beatles.txt  Harry_Potter1.txt
server/include/: actCollectionsHistory.h  bookRep.h  collectionsHistoryRep.h  collectionsRep.h  dbManager.h  historyCollectionsRep.h  userRep.h  wordRep.h  wordSetContentRep.h  wordSetRep.h
server/src/: bookRep.cpp  collectionsHistoryRep.cpp  collectionsRep.cpp  main.cpp  playing_server.cpp  userRep.cpp  wordRep.cpp  wordSetContentRep.cpp  wordSetRep.cpp
